# Analytical-Knife

./: .eslintrc.cjs  .gitattributes  CLAUDE.md  Development Guide.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  qodana.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: backend-ci.yml  frontend-ci.yml  qodana.yml
docs/: API.md  CustomPluginImportPlan.md  Development Guide.md  DevelopmentGuide.md
public/fonts/: SourceHanMono.ttc
scripts/: sync-version.cjs
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/module/crypto/: common_modulus.rs  mod.rs  replacer.rs  word_freq.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/crypto/: big_rsa.rs  caesar.rs  common_modulus.rs  mod.rs  replacer.rs  word_freq.rs
src-tauri/src/modules/encode_decode/: vigenere.rs
src-tauri/src/modules/images/: image_structure_analyzer.rs  mirage_tank.rs  mod.rs  wh_edit.rs
src-tauri/src/modules/images/formats/: README.md  gif.rs  jpeg.rs  mod.rs  png.rs
src-tauri/src/modules/media/: audio_heatmap.rs  ffmpeg.rs  mod.rs
src-tauri/src/modules/network/: log_analyzer.rs
src-tauri/src/modules/plugins/: registry.rs
src/components/: About.tsx  DeveloperSettings.tsx  ErrorBoundary.tsx  Home.tsx  HtmlPluginHost.tsx  UISettings.tsx
src/hooks/: useAppSettings.ts  useCustomPlugins.ts  useFilePreview.ts
src/registry/: index.ts  sidebarIcons.ts  types.ts
src/utils/: customPlugins.ts  error.ts  error.tsx  (+3 more)
(+40 files in other folders)
