[package]
name = "Analytical_Knife"
version = "0.8.0"
description = "CTF Toolbox"
authors = ["CreationWong"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "analytical_knife_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint = "0.4.6"
num-traits = "0.2.19"
module = "0.3.1"
num-integer = "0.1.46"
rayon = "1.11.0"
regex = "1.12.2"
tokio = { version = "1.49.0", features = ["full"] }
image = "0.25"
base64 = "0.22"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
kamadak-exif = "0.6"
hex = "0.4"
byteorder = "1.4"
chrono = "0.4.43"
percent-encoding = "2.3.2"

